namespace ThreeOrMore;

internal interface IRollable
{
    void Roll();
}