@startuml ThreeOrMore

interface IRollable


class UserInterface
class Test


class Program
class Player
abstract class Die
class Dice
class Game
class FairDie
class WeightedDie

Die <|-- FairDie : inherits from
Die <|-- WeightedDie 
Dice *-- FairDie 
Dice *-- WeightedDie  : used by
IRollable <|.. Die : implements
IRollable <|.. Dice
Game *-- Dice
Game *-- Player
Program *-- Game

@enduml